--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -32,6 +32,7 @@ div.task-list-base {
   font-size: 14px !important;
   margin: 10px;
   border-radius: 10px;
+  padding: 1px;
 }
 
 div.task-group-base {
