--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -11,8 +11,21 @@ body {
 
 /* デフォルト書式キャンセル */
 input{
-  border:none;
-  background:none;
+  border:solid;
+  border-width: 1px;
+  border-radius: 3px;
+  padding: 3px;
+  background-color: cornsilk;
+}
+
+textarea{
+  border:solid;
+  border-width: 1px;
+  border-radius: 5px;
+  display: block;
+  background-color: beige;
+  width: 95%;
+  margin: 0 auto;
 }
 
 ul li {
@@ -48,6 +61,7 @@ div.task-base {
   background-color: rgb(255, 255, 255);
   font-size: 14px !important;
   margin: 10px;
+  padding: 5px 10px;
   border-radius: 10px;
   cursor: pointer;
 }
