--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -18,16 +18,6 @@ input{
   background-color: cornsilk;
 }
 
-textarea{
-  border:solid;
-  border-width: 1px;
-  border-radius: 5px;
-  display: block;
-  background-color: beige;
-  width: 95%;
-  margin: 0 auto;
-}
-
 ul li {
   list-style: none;
 }
@@ -73,4 +63,14 @@ div.task-dialog input {
   margin: 5px;
   padding: 5px;
   width: 300px;
+}
+
+div.task-dialog textarea{
+  border:solid;
+  border-width: 1px;
+  border-radius: 5px;
+  display: block;
+  background-color: white;
+  width: 95%;
+  margin: 0 auto;
 }
