--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -93,3 +93,44 @@ div.task-dialog textarea{
   width: 95%;
   margin: 0 auto;
 }
+
+.dialog-close{
+  color: dimgray;
+  display: block;
+  margin-left: auto;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.dialog-close:hover{
+  transition: all .3s ease;
+  color: black;
+}
+
+/*
+.dialog-close:after{
+  position: absolute;
+  left: -0.2em;
+  top: -0.2em;
+  width: 0.8em;
+  height: 0.8em;
+  background: rgba(0, 0, 0, 0.3);
+
+  border-radius: 50%;
+  border-color: #aaa;
+  background-color: #aaa;
+  border-style: solid;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  opacity: 0;
+  transition: all .5s ease;
+
+  content: "";
+}
+.dialog-close:hover:after{
+  opacity: 0.5;
+}
+*/
