--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -94,7 +94,7 @@ div.task-dialog textarea{
   margin: 0 auto;
 }
 
-.dialog-close{
+.dialog-close-btn{
   color: dimgray;
   display: block;
   margin-left: auto;
@@ -103,34 +103,22 @@ div.task-dialog textarea{
   margin-bottom: 15px;
   position: relative;
 }
-.dialog-close:hover{
+.dialog-close-btn:hover{
   transition: all .3s ease;
   color: black;
 }
 
-/*
-.dialog-close:after{
-  position: absolute;
-  left: -0.2em;
-  top: -0.2em;
-  width: 0.8em;
-  height: 0.8em;
-  background: rgba(0, 0, 0, 0.3);
-
-  border-radius: 50%;
-  border-color: #aaa;
-  background-color: #aaa;
-  border-style: solid;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-
-  opacity: 0;
-  transition: all .5s ease;
-
-  content: "";
+.taskgroup-close-btn{
+  float: right;
+  color: dimgray;
+  display: flow;
+  margin-right: 10px;
+  width: 20px;
+  height: 20px;
+  margin-bottom: 15px;
 }
-.dialog-close:hover:after{
-  opacity: 0.5;
+.taskgroup-close-btn:hover{
+  transition: all .3s ease;
+  color: black;
 }
-*/
+
