タスクの完了状態チェックボックスの実装

--- a/src/main/react/css/base.css
+++ b/src/main/react/css/base.css
@@ -1,5 +1,4 @@
 
-
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 html {
@@ -28,11 +27,6 @@ textarea{
 
 ul li {
   list-style: none;
-}
-label {
-  margin-right: 10px;
-  width: 80px;
-  float: left;
 }
 
 ul {
@@ -133,10 +127,20 @@ input[type=checkbox] { display:none; } /* to hide the checkbox itself */
 input[type=checkbox] + label:before {
   font-family: FontAwesome;
   display: inline-block;
+  cursor: pointer;
+  font-size: 20px;
+}
+input[type=checkbox] + label {
+  cursor: pointer;
+  color: dimgrey;
+}
+input[type=checkbox] + label:hover { 
+  font-weight: bold;
+  color: black;
 }
 
 input[type=checkbox] + label:before { content: "\f096"; } /* unchecked icon */
-input[type=checkbox] + label:before { letter-spacing: 10px; } /* space between checkbox and label */
+input[type=checkbox] + label:before { letter-spacing: 7px; } /* space between checkbox and label */
 
 input[type=checkbox]:checked + label:before { content: "\f046"; } /* checked icon */
 input[type=checkbox]:checked + label:before { letter-spacing: 5px; } /* allow space for check mark */
